Enhance email templates for improved clarity and personalization
- Updated the doctor account creation, super admin approval, and forgot password email templates to enhance personalization by addressing recipients by name.
- Improved the clarity of messages regarding account status and actions required, ensuring a more engaging communication experience.
- Adjusted wording for a more welcoming tone and consistent styling across templates, including a shift from "Regards" to "Warm Regards" for a friendlier closing.

--- a/src/templates/forgot-password.ejs
+++ b/src/templates/forgot-password.ejs
@@ -487,7 +487,7 @@
                                             <td class=t34>
                                               <h1 class=t32
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Reset Your Sendscript Password</h1>
+                                                Reset Your Sendscript Password Verification code Inside</h1>
                                             </td>
                                           </tr>
                                         </table>
@@ -514,10 +514,67 @@
                                           <tr>
                                             <td class=t40>
                                               <p class=t38
-                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:500;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Dear <%= doctor_name %>,<br />We received a request to reset your Sendscript
-                                                account password.<br />Please use the following Verification Code to
-                                                proceed:</p>
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                Dear <%= doctor_name %>,
+                                              </p>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class=t51
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:6px;line-height:6px;font-size:1px;display:block;">
+                                    &nbsp;&nbsp;</div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align=center>
+                                  <table class=t43 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=446 class=t42 style="width:446px;">
+                                        <table class=t41 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t40>
+                                              <p class=t38
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                We received a request to reset your Sendscript account password.
+                                              </p>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class=t51
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:6px;line-height:6px;font-size:1px;display:block;">
+                                    &nbsp;&nbsp;</div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align=center>
+                                  <table class=t43 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=446 class=t42 style="width:446px;">
+                                        <table class=t41 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t40>
+                                              <p class=t38
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                Please use the following Verification Code to proceed:
+                                              </p>
                                             </td>
                                           </tr>
                                         </table>
@@ -580,9 +637,9 @@
                                           <tr>
                                             <td class=t53>
                                               <p class=t51
-                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:500;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                This code is valid for the next 10 minutes. If you did not request a
-                                                password reset, please ignore this message.</p>
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                This code is valid for the next 10 minutes. If you did not request a password reset, please ignore this message.
+</p>
                                             </td>
                                           </tr>
                                         </table>
@@ -609,8 +666,8 @@
                                           <tr>
                                             <td class=t59>
                                               <p class=t57
-                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:500;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Regards, <br />The Sendscript Team</p>
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
+                                                Warm Regards, <br />The Sendscript Team</p>
                                             </td>
                                           </tr>
                                         </table>
