--- a/src/templates/doctor-account-created.ejs
+++ b/src/templates/doctor-account-created.ejs
@@ -502,13 +502,93 @@
                                             <td class=t40>
                                               <p class=t38
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Dear <%= doctor_name %>,<br />Congratulations! Your registration with
-                                                  SendScript
-                                                  is now complete.<br />Your account is currently under review. You will
-                                                  receive a notification at your registered email address once the
-                                                  review
-                                                  process is complete.<br />In the meantime, you can check your account
-                                                  status by logging into the platform.</p>
+                                                Dear <%= doctor_name %>,
+                                              </p>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class=t45
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:7px;line-height:7px;font-size:1px;display:block;">
+                                    &nbsp;&nbsp;</div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align=center>
+                                  <table class=t43 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=467 class=t42 style="width:467px;">
+                                        <table class=t41 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t40>
+                                              <p class=t38
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">Congratulations! Your registration with SendScript has been successfully completed.
+                                              </p>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class=t45
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:7px;line-height:7px;font-size:1px;display:block;">
+                                    &nbsp;&nbsp;</div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align=center>
+                                  <table class=t43 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=467 class=t42 style="width:467px;">
+                                        <table class=t41 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t40>
+                                              <p class=t38
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">Your account is currently under review. You will receive a notification at your registered email address once the review process is finalised.
+                                                
+                                              </p>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class=t45
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:7px;line-height:7px;font-size:1px;display:block;">
+                                    &nbsp;&nbsp;</div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align=center>
+                                  <table class=t43 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=467 class=t42 style="width:467px;">
+                                        <table class=t41 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t40>
+                                              <p class=t38
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">In the meantime, you can check your account status by logging into the platform.
+                                              </p>
                                             </td>
                                           </tr>
                                         </table>
@@ -565,8 +645,8 @@
                                             <td class=t52>
                                               <p class=t50
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                We&rsquo;re thrilled to have you on board and look forward to supporting
-                                                you in delivering top-quality healthcare.</p>
+                                                We&rsquo;re excited to have you on board and look forward to supporting you in delivering exceptional healthcare.
+                                              </p>
                                             </td>
                                           </tr>
                                         </table>
@@ -594,7 +674,7 @@
                                             <td class=t58>
                                               <p class=t56
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Regards, <br />The Sendscript Team</p>
+                                                Warm Regards, <br />The Sendscript Team</p>
                                             </td>
                                           </tr>
                                         </table>
