--- a/src/templates/doctor-super-admin-approval.ejs
+++ b/src/templates/doctor-super-admin-approval.ejs
@@ -487,8 +487,8 @@
                               </tr>
                               <tr>
                                 <td>
-                                  <div class=t39
-                                    style="mso-line-height-rule:exactly;mso-line-height-alt:17px;line-height:17px;font-size:1px;display:block;">
+                                  <div class=t51
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:6px;line-height:6px;font-size:1px;display:block;">
                                     &nbsp;&nbsp;</div>
                                 </td>
                               </tr>
@@ -504,11 +504,64 @@
                                             <td class=t40>
                                               <p class=t38
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Dear <%= doctor_name %>,<br />Congratulations! Your account
-                                                  verification with the SendScript Doctor Panel has been successfully
-                                                  approved.
-                                                  <br />You can now log in and start managing your patients efficiently
-                                                  with our platform.
+                                                Dear <%= doctor_name %>,
+                                              </p>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class=t51
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:6px;line-height:6px;font-size:1px;display:block;">
+                                    &nbsp;&nbsp;</div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align=center>
+                                  <table class=t43 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=467 class=t42 style="width:467px;">
+                                        <table class=t41 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t40>
+                                              <p class=t38
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">We&rsquo;re pleased to inform you that your account verification for the SendScript Doctor Panel has been successfully approved.
+                                                
+                                              </p>
+                                            </td>
+                                          </tr>
+                                        </table>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <div class=t51
+                                    style="mso-line-height-rule:exactly;mso-line-height-alt:6px;line-height:6px;font-size:1px;display:block;">
+                                    &nbsp;&nbsp;</div>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td align=center>
+                                  <table class=t43 role=presentation cellpadding=0 cellspacing=0
+                                    style="Margin-left:auto;Margin-right:auto;">
+                                    <tr>
+                                      <td width=467 class=t42 style="width:467px;">
+                                        <table class=t41 role=presentation cellpadding=0 cellspacing=0 width=100%
+                                          style="width:100%;">
+                                          <tr>
+                                            <td class=t40>
+                                              <p class=t38
+                                                style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">You can now log in and begin managing your patients efficiently with our platform.
                                               </p>
                                             </td>
                                           </tr>
@@ -566,9 +619,7 @@
                                             <td class=t52>
                                               <p class=t50
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                We&rsquo;re excited to support you in delivering exceptional healthcare.
-                                                If you have any questions or need assistance, our support team is here
-                                                to help.
+                                                We&rsquo;re excited to support you in delivering exceptional healthcare. If you have any questions or need assistance, our support team is here to help.
                                               </p>
                                             </td>
                                           </tr>
@@ -597,7 +648,7 @@
                                             <td class=t58>
                                               <p class=t56
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Regards, <br />The Sendscript Team</p>
+                                                Warm Regards, <br />The Sendscript Team</p>
                                             </td>
                                           </tr>
                                         </table>
